Implement general network and train function (not tested)

--- a/NGCF.ipynb
+++ b/NGCF.ipynb
@@ -202,6 +202,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "is_iom9XRSdO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "P2iFaHvdvc8J",
         "colab_type": "code",
         "outputId": "ce6421f0-1049-4cd2-8c93-d37e2fe7fa3c",
@@ -750,13 +763,13 @@
         "\n",
         "$m_{u \\leftarrow i} = \\dfrac{1}{\\sqrt{|N_u||N_i|}} (W_1 e_i + W_2(e_i \\odot e_u))$\n",
         "\n",
-        "Where $N_u, N_i$ are the first hop neighbors of $u$ and $i$, $W_1, W_2$ are trainable weight matrices to distill useful information for propagation, and $e_i$ and $e_u$ are embeddings of the users and items.\n",
+        "Where $N_u, N_i$ are the first hop neighbors of $u$ and $i$, $W_1, W_2$ are trainable weight matrices to distill useful information for propagation, and $e_i$ and $e_u$ are embeddings of the users and items. Note that in the special case where $u == i$, the second term is dropped.\n",
         "\n",
         "The embedding for a user (or item) is updated through message aggregation as \n",
         "\n",
         "$e_u^{(l)} = LeakyReLU(m_{u \\leftarrow u} + \\sum_{i \\in N_u} m_{u \\leftarrow i})$\n",
         "\n",
-        "If the graph is constructed properly, this means that this simply a summation over all edges (when selfloops are included), followed by a LeakyReLU activiation."
+        "If the graph is constructed properly, this is simply a summation over all edges (when selfloops are included), followed by a LeakyReLU activiation."
       ]
     },
     {
@@ -771,12 +784,12 @@
         "from torch_geometric.utils import remove_self_loops, add_self_loops\n",
         "\n",
         "class NGCFLayer(MessagePassing):\n",
-        "  def __init__(self, in_channels, out_channels):\n",
+        "  def __init__(self, embed_size):\n",
         "    super(NGCFLayer, self).__init__(aggr='add') # Summation as aggregation\n",
         "    # The W1 matrix\n",
-        "    self.lin1 = Linear(bias=false)\n",
+        "    self.lin1 = Linear(embed_size, embed_size, bias=false)\n",
         "    # The W2 matrix\n",
-        "    self.lin2 = Linear(bias=false)\n",
+        "    self.lin2 = Linear(embed_size, embed_size, bias=false)\n",
         "    self.act = LeakyReLU()\n",
         "\n",
         "  def forward(self, x, edge_index):\n",
@@ -802,7 +815,75 @@
         "\n",
         "  def update(self, aggr_out):\n",
         "    # Return the LeakyReLU result\n",
-        "    return self.act(aggr_out)"
+        "    return self.act(aggr_out)\n",
+        "\n",
+        "\n",
+        "ngcf_layer = NGCFLayer(embed_size=64)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xMYQru5BUmku",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "embed_size = 64\n",
+        "batch_size = 100\n",
+        "num_epochs = 30\n",
+        "\n",
+        "class Net(torch.nn.Module):\n",
+        "  def __init__(self, n_layers):\n",
+        "    super(Net, self).__init__()\n",
+        "\n",
+        "    self.ncgf_layers = []\n",
+        "    for i in range(n_layers):\n",
+        "      self.ncgf_layers.append(NCGFLayer(embed_size))\n",
+        "    \n",
+        "  def forward(self, data):\n",
+        "    x, edge_index, batch = data.x, data.edge_index, data.batch\n",
+        "    for layer in self.ncgf_layers:\n",
+        "      x = layer(x, edge_index)\n",
+        "    return x"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bxk0C8UVWd4w",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Note: directly taken from https://towardsdatascience.com/hands-on-graph-neural-networks-with-pytorch-pytorch-geometric-359487e221a8\n",
+        "# Needs to be adapted to our own needs\n",
+        "\n",
+        "def train():\n",
+        "  model.train()\n",
+        "  loss_all = 0\n",
+        "  for data in train_loader:\n",
+        "    data = data.to(device)\n",
+        "    optimizer.zero_grad()\n",
+        "    output = model(data)\n",
+        "    label = data.y.to(device)\n",
+        "    loss = crit(output, label)\n",
+        "    loss.backward()\n",
+        "    loss_all += data.num_graphs * loss_item()\n",
+        "    optimizer.step()\n",
+        "  return loss_all / len(train_dataset)\n",
+        "\n",
+        "device = torch.device('cuda')\n",
+        "model = Net().to(device)\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=0.005)\n",
+        "crit = torch.nn.BCELoss()\n",
+        "train_loader = DataLoader(train_dataset, batch_size=batch_size)\n",
+        "for epoch in range(num_epochs):\n",
+        "  train()"
       ],
       "execution_count": 0,
       "outputs": []
