Added early stopping strategy

--- a/NGCF_take2.ipynb
+++ b/NGCF_take2.ipynb
@@ -6,13 +6,13 @@
       "name": "NGCF - take2.ipynb",
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPJCfPWM5U4J1hx49/pqM/A",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "-GuQIsFhz_O6",
         "colab_type": "code",
-        "outputId": "cdc3e75b-6c53-47dc-c62b-23aab081f09b",
+        "outputId": "8986aeed-4e8d-488e-c0b6-68e8392ddbbe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -198,6 +198,20 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SDqUeLQ7ef1i",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_data = DataLoader(test_file, 1024)\n",
+        "test_data.compute_adj_matrix()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "RZpW3QFz2A7Y",
@@ -301,11 +315,11 @@
       "metadata": {
         "id": "wHTQPAOcUD9X",
         "colab_type": "code",
+        "outputId": "4657a598-6282-48d2-8997-876e1ef7bd58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 382
-        },
-        "outputId": "4657a598-6282-48d2-8997-876e1ef7bd58"
+        }
       },
       "source": [
         "model = NGCF(n_users=1000, n_items=2000, embed_size=64, n_layers=2, adj_matrix=train_data.L)\n",
@@ -330,7 +344,7 @@
         "  epoch_loss = train(model, train_data)\n",
         "  print(str(t) + ': ' + str(epoch_loss))"
       ],
-      "execution_count": 92,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,6 +374,131 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_2P6ncEkiE2R",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def split_mtx(X, n_folds=100):\n",
+        "  # Split a matrix/Tensor into n_folds (for the user embeddings and the R matrices)\n",
+        "  X_folds = []\n",
+        "  fold_len = X.shape[0]//n_folds\n",
+        "  for i in range(n_folds):\n",
+        "    start = i * fold_len\n",
+        "    if i == n_folds -1:\n",
+        "      end = X.shape[0]\n",
+        "    else:\n",
+        "      end = (i + 1) * fold_len\n",
+        "    X_folds.append(X[start:end])\n",
+        "  return X_folds\n",
+        "\n",
+        "def ndcg_at_k_gpu(pred_items, test_items, test_indices, k):\n",
+        "  # to calculate ndcg@k\n",
+        "  r = (test_items * pred_items).gather(1, test_indices)\n",
+        "  f = torch.from_numpy(np.log2(np.arange(2, k+2))).float().cuda()\n",
+        "  dcg = (r[:, :k]/f).sum(1)\n",
+        "  dcg_max = (torch.sort(r, dim=1, descending=True)[0][:, :k]/f).sum(1)\n",
+        "  ndcg = dcg/dcg_max\n",
+        "  ndcg[torch.isnan(ndcg)] = 0\n",
+        "  return ndcg\n",
+        "\n",
+        "def test_GPU(u_emb, i_emb, Rtr, Rte, Ks):\n",
+        "  ue_folds = split_mtx(u_emb)\n",
+        "  tr_folds = split_mtx(Rtr)\n",
+        "  te_folds = split_mtx(Rte)\n",
+        "\n",
+        "  fold_prec, fold_rec, fold_ndcg, fold_hr = \\\n",
+        "    defaultdict(list), defaultdict(list), defaultdict(list), defaultdict(list)\n",
+        "  for ue_f, tr_f, te_f in zip(ue_folds, tr_folds, te_folds):\n",
+        "    scores = torch.mm(ue_f, i_emb.t())\n",
+        "    test_items = torch.from_numpy(te_f.todense()).float().cuda()\n",
+        "    non_train_items = torch.from_numpy(1-(tr_f.todense())).float().cuda()\n",
+        "    scores = scores * non_train_items\n",
+        "    _, test_indices = torch.topk(scores, dim=1, k=max(Ks))\n",
+        "    pred_items = torch.zeros_like(scores).float()\n",
+        "    pred_items.scatter_(dim=1,index=test_indices,src=torch.tensor(1.0).cuda())\n",
+        "\n",
+        "    for k in Ks:\n",
+        "      topk_preds = torch.zeros_like(scores).float()\n",
+        "      topk_preds.scatter_(dim=1,index=test_indices[:, :k],src=torch.tensor(1.0))\n",
+        "\n",
+        "      TP = (test_items * topk_preds).sum(1)\n",
+        "      prec = TP/k\n",
+        "      rec = TP/test_items.sum(1)\n",
+        "      hit_r = (TP > 0).float()\n",
+        "      ndcg = ndcg_at_k_gpu(pred_items, test_items, test_indices, k)\n",
+        "\n",
+        "      fold_prec[k].append(prec)\n",
+        "      fold_rec[k].append(rec)\n",
+        "      fold_ndcg[k].append(ndcg)\n",
+        "      fold_hr[k].append(hit_r)\n",
+        "\n",
+        "  result = {'precision': [], 'recall': [], 'ndcg': [], 'hit_ratio': []}\n",
+        "  for k in Ks:\n",
+        "    result['precision'].append(torch.cat(fold_prec[k]).mean())\n",
+        "    result['recall'].append(torch.cat(fold_rec[k]).mean())\n",
+        "    result['ndcg'].append(torch.cat(fold_ndcg[k]).mean())\n",
+        "    result['hit_ratio'].append(torch.cat(fold_hr[k]).mean())\n",
+        "  return result\n",
+        "\n",
+        "def early_stopping(log_value, best_value, stopping_step, expected_order='asc', patience=10):\n",
+        "  # better is higher or lower\n",
+        "  assert expected_order in ['asc', 'dec']\n",
+        "  if (expected_order == 'asc' and log_value >= best_value) or (expected_order == 'dec' and log_value <= best_value):\n",
+        "    stopping_step = 0\n",
+        "    best_value = log_value\n",
+        "  else:\n",
+        "    stopping_step += 1\n",
+        "  if stopping_step >= patience:\n",
+        "    print(\"Early stopping is trigger at step: {} log:{}\".format(patience, log_value))\n",
+        "    should_stop = True\n",
+        "  else:\n",
+        "    should_stop = False\n",
+        "  return best_value, stopping_step, should_stop\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z5O4b6tWqeQs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# with early stopping\n",
+        "print_every, eval_every, save_every = 1, 1, 10\n",
+        "Ks = [10, 20]\n",
+        "\n",
+        "model = NGCF(n_users=1000, n_items=2000, embed_size=64, n_layers=2, adj_matrix=train_data.L)\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=0.05)\n",
+        "n_epochs = 20\n",
+        "\n",
+        "model.train()\n",
+        "n_batch = train_data.n_data // train_data.batch_size + 1\n",
+        "print('Total batches: ' + str(n_batch))\n",
+        "\n",
+        "cur_best_loss, stopping_step, should_stop = 1e3, 0, False\n",
+        "\n",
+        "for t in range(n_epochs):\n",
+        "  epoch_loss = train(model, train_data)\n",
+        "  print(str(t) + ': ' + str(epoch_loss))\n",
+        "  if epoch % eval_every  == (eval_every - 1):\n",
+        "    result = test_GPU(model.user_embeddings_final.detach(), model.item_embeddings_final.detach(), train_data.R, test_data.R, Ks)\n",
+        "    log_value = result['recall'][0]\n",
+        "    cur_best_metric, stopping_step, should_stop = early_stopping(log_value, cur_best_metric, stopping_step, args.patience)\n",
+        "  if should_stop == True: \n",
+        "    break\n",
+        "  "
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -399,11 +538,11 @@
       "metadata": {
         "id": "9rkykAgxzXqa",
         "colab_type": "code",
+        "outputId": "b67e9e88-b52c-42d9-9af2-68b6dbfced67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "b67e9e88-b52c-42d9-9af2-68b6dbfced67"
+        }
       },
       "source": [
         "r = np.random.choice(2, 20, p=[0.7, 0.3])\n",
@@ -412,7 +551,7 @@
         "print(recall_at_k(r, k, interactions))\n",
         "print(ndcg_at_k(r, k))"
       ],
-      "execution_count": 57,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
