Improve adjacency matrix computation

--- a/NGCF_take2.ipynb
+++ b/NGCF_take2.ipynb
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "-GuQIsFhz_O6",
         "colab_type": "code",
-        "outputId": "8986aeed-4e8d-488e-c0b6-68e8392ddbbe",
+        "outputId": "61561e7a-c910-4dd4-ae9d-a22609160ea0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -58,7 +58,7 @@
         "\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 3,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +87,10 @@
         "colab": {}
       },
       "source": [
-        "path = Path('./drive/My Drive/RP_data/backup')\n",
+        "# real data\n",
+        "# path = Path('./drive/My Drive/RP_data/backup')\n",
+        "# toy data\n",
+        "path = Path('./drive/My Drive/RP_data/toy_data')\n",
         "train_file = path/'train.txt'\n",
         "test_file = path/'test.txt'\n",
         "\n",
@@ -100,7 +103,6 @@
         "    self.pos_items = {}\n",
         "    self.neg_items = {}\n",
         "    self.load()\n",
-        "    self.compute_adj_matrix()\n",
         "\n",
         "  def load(self):\n",
         "    with open(self.file) as f:\n",
@@ -137,15 +139,16 @@
         "  \n",
         "  def compute_adj_matrix(self):\n",
         "    # A is the Adjecency matrix in Dict Of Keys form, used when computing the Laplacian norm\n",
-        "    A = sp.dok_matrix((self.n_users + self.n_items, self.n_users + self.n_items), dtype=np.float32)\n",
+        "    A = sp.dok_matrix((self.n_users + self.n_items, self.n_users + self.n_items), dtype=np.float32).tolil()\n",
         "    A[:self.n_users, self.n_users:] = self.R.tolil()\n",
         "    A[self.n_users:, :self.n_users] = self.R.tolil().T\n",
         "    A = A.todok()\n",
         "\n",
-        "    norm_adj = self.compute_norm_adj_matrix(A + sp.eye(A.shape[0]))\n",
+        "    # norm_adj = self.compute_norm_adj_matrix(A + sp.eye(A.shape[0]))\n",
         "    mean_adj = self.compute_norm_adj_matrix(A)\n",
         "    # L is the Laplacian used for normalizing message construction\n",
-        "    self.L = norm_adj + sp.eye(mean_adj.shape[0])\n",
+        "    # ngcf_adj = mean_adj + sp.eye(mean_adj.shape[0])\n",
+        "    self.adj_matrix = mean_adj + sp.eye(mean_adj.shape[0])\n",
         "\n",
         "  def sample_pos(self, u, amount):\n",
         "    # Sample a batch of <amount> positive items for user u\n",
@@ -177,36 +180,8 @@
         "      neg_sample += self.sample_neg(u, 1)\n",
         "    return users, pos_sample, neg_sample\n",
         "\n",
-        "train_data = DataLoader(train_file, 1024)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RjbVncq33l8x",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "train_data.compute_adj_matrix()\n",
-        "users, pos, neg = train_data.sample()\n",
-        "print(len(users), len(pos), len(neg))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SDqUeLQ7ef1i",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "test_data = DataLoader(test_file, 1024)\n",
-        "test_data.compute_adj_matrix()"
+        "train_data = DataLoader(train_file, batch_size=1024)\n",
+        "train_data.compute_adj_matrix()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -233,7 +208,7 @@
         "from torch.nn import init, LeakyReLU, Linear, Module, ModuleList, Parameter\n",
         "import torch.nn.functional as F\n",
         "\n",
-        "class NGCF(nn.Module):\n",
+        "class NGCF(Module):\n",
         "  def __init__(self, n_users, n_items, embed_size, n_layers, adj_matrix):\n",
         "    super().__init__()\n",
         "    self.n_users = n_users\n",
@@ -264,11 +239,24 @@
         "      if ('bias' not in name):\n",
         "        init.xavier_uniform_(parameter)\n",
         "\n",
+        "  def split_mtx(self, X, n_folds=100):\n",
+        "    # Split a matrix/Tensor into n_folds (for the user embeddings and the R matrices)\n",
+        "    X_folds = []\n",
+        "    fold_len = X.shape[0]//n_folds\n",
+        "    for i in range(n_folds):\n",
+        "      start = i * fold_len\n",
+        "      if i == n_folds -1:\n",
+        "        end = X.shape[0]\n",
+        "      else:\n",
+        "        end = (i + 1) * fold_len\n",
+        "      X_folds.append(X[start:end])\n",
+        "    return X_folds\n",
+        "\n",
         "  def to_sparse_tensor(self, X):\n",
         "    coo = X.tocoo().astype(np.float32)\n",
         "    i = torch.LongTensor(np.mat((coo.row, coo.col)))\n",
         "    v = torch.FloatTensor(coo.data)\n",
-        "    return torch.sparse.FloatTensor(i, v, coo.shape)\n",
+        "    return torch.sparse.FloatTensor(i, v, coo.shape).cuda()\n",
         "\n",
         "  def compute_loss(self, u, i, j):\n",
         "    # Get the embeddings final embeddings for the current sample\n",
@@ -283,13 +271,17 @@
         "    return bpr_loss\n",
         "\n",
         "  def forward(self, u, i, j):\n",
+        "    adj_splits = self.split_mtx(self.adj_matrix)\n",
         "    embeddings = torch.cat((self.user_embeddings, self.item_embeddings))\n",
         "    final_embeddings = [embeddings]\n",
         "\n",
         "    for l in range(self.n_layers):\n",
-        "\n",
+        "      embedding_parts = []\n",
+        "      for part in adj_splits:\n",
+        "        embedding_parts.append(torch.sparse.mm(self.to_sparse_tensor(part), embeddings))\n",
         "      # Message construction\n",
-        "      t1_embeddings = torch.sparse.mm(self.to_sparse_tensor(self.adj_matrix), embeddings)\n",
+        "      # t1_embeddings = torch.sparse.mm(self.to_sparse_tensor(self.adj_matrix), embeddings)\n",
+        "      t1_embeddings = torch.cat(embedding_parts, 0)\n",
         "      t1 = self.W1[l](t1_embeddings)\n",
         "      t2_embeddings = embeddings.mul(t1_embeddings)\n",
         "      t2 = self.W2[l](t2_embeddings)\n",
@@ -315,65 +307,44 @@
       "metadata": {
         "id": "wHTQPAOcUD9X",
         "colab_type": "code",
-        "outputId": "4657a598-6282-48d2-8997-876e1ef7bd58",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 382
-        }
+        "colab": {}
       },
       "source": [
-        "model = NGCF(n_users=1000, n_items=2000, embed_size=64, n_layers=2, adj_matrix=train_data.L)\n",
-        "optimizer = torch.optim.Adam(model.parameters(), lr=0.05)\n",
-        "n_epochs = 20\n",
+        "from time import time\n",
+        "\n",
+        "# norm_adj, mean_adj, ngcf_adj = train_data.compute_adj_matrix()\n",
+        "device = torch.device('cuda')\n",
+        "model = NGCF(n_users=train_data.n_users, n_items=train_data.n_items, embed_size=64, n_layers=2, adj_matrix=train_data.adj_matrix).to(device)\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=0.005)\n",
+        "n_epochs = 5\n",
         "\n",
         "def train(model, data):\n",
+        "  model.train()\n",
         "  total_loss = 0\n",
-        "  for b in range(n_batch):\n",
+        "  for b in range(10):\n",
+        "    start = time()\n",
         "    u, i, j = data.sample()\n",
+        "    u = torch.from_numpy(u).long().to(device)\n",
+        "    i = torch.LongTensor(i).to(device)\n",
+        "    j = torch.LongTensor(j).to(device)\n",
         "    optimizer.zero_grad()\n",
         "    loss = model(u, i, j)\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
         "    total_loss += loss.item()\n",
+        "    print('time: ' + str(time()-start))\n",
+        "    print(loss.item())\n",
         "  return total_loss\n",
         "\n",
-        "model.train()\n",
         "n_batch = train_data.n_data // train_data.batch_size + 1\n",
         "print('Total batches: ' + str(n_batch))\n",
         "for t in range(n_epochs):\n",
         "  epoch_loss = train(model, train_data)\n",
-        "  print(str(t) + ': ' + str(epoch_loss))"
+        "  print(str(t) + ': ' + str(epoch_loss))\n",
+        "train(model, train_data)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Total batches: 24\n",
-            "0: 16.40497100353241\n",
-            "1: 16.412854433059692\n",
-            "2: 16.407753586769104\n",
-            "3: 16.401634633541107\n",
-            "4: 16.40473961830139\n",
-            "5: 16.40420436859131\n",
-            "6: 16.406798183918\n",
-            "7: 16.398602187633514\n",
-            "8: 16.410856127738953\n",
-            "9: 16.409800827503204\n",
-            "10: 16.40645980834961\n",
-            "11: 16.405922412872314\n",
-            "12: 16.408011853694916\n",
-            "13: 16.401700973510742\n",
-            "14: 16.40281391143799\n",
-            "15: 16.410841941833496\n",
-            "16: 16.405292451381683\n",
-            "17: 16.406582713127136\n",
-            "18: 16.404249131679535\n",
-            "19: 16.408159732818604\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
