Add evaluation metrics

--- a/NGCF_take2.ipynb
+++ b/NGCF_take2.ipynb
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "-GuQIsFhz_O6",
         "colab_type": "code",
-        "outputId": "61561e7a-c910-4dd4-ae9d-a22609160ea0",
+        "outputId": "9b6d3799-6278-4607-b03a-6c20976e8a7b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -58,7 +58,7 @@
         "\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 18,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,6 +187,19 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WZoM-xPJEI-W",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_data = DataLoader(test_file, batch_size=1024)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "RZpW3QFz2A7Y",
@@ -258,12 +271,7 @@
         "    v = torch.FloatTensor(coo.data)\n",
         "    return torch.sparse.FloatTensor(i, v, coo.shape).cuda()\n",
         "\n",
-        "  def compute_loss(self, u, i, j):\n",
-        "    # Get the embeddings final embeddings for the current sample\n",
-        "    batch_user_emb = self.user_embeddings_final[u]\n",
-        "    batch_pos_emb = self.item_embeddings_final[i]\n",
-        "    batch_neg_emb = self.item_embeddings_final[j]\n",
-        "\n",
+        "  def compute_loss(self, batch_user_emb, batch_pos_emb, batch_neg_emb):\n",
         "    pos_y = torch.mul(batch_user_emb, batch_pos_emb).sum(dim=1)\n",
         "    neg_y = torch.mul(batch_user_emb, batch_neg_emb).sum(dim=1)\n",
         "    # Unregularized loss\n",
@@ -297,7 +305,27 @@
         "    self.user_embeddings_final = Parameter(final_u_embeddings)\n",
         "    self.item_embeddings_final = Parameter(final_i_embeddings)\n",
         "\n",
-        "    return self.compute_loss(u, i, j)"
+        "    batch_user_emb = final_u_embeddings[u]\n",
+        "    batch_pos_emb = final_i_embeddings[i]\n",
+        "    batch_neg_emb = final_i_embeddings[j]\n",
+        "\n",
+        "    return self.compute_loss(batch_user_emb, batch_pos_emb, batch_neg_emb)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x3plBLDjm5NH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# optional: restore previously trained model\n",
+        "def restore_model(path):\n",
+        "  model = NGCF(n_users=train_data.n_users, n_items=train_data.n_items, embed_size=64, n_layers=2, adj_matrix=adj_matrix).to(device)\n",
+        "  model.load_state_dict(torch.load(model_path))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -307,22 +335,77 @@
       "metadata": {
         "id": "wHTQPAOcUD9X",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "9b6adeed-1ea5-4a94-82b0-e7dbfa7275d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
       },
       "source": [
         "from time import time\n",
+        "\n",
+        "# path to save model to\n",
+        "models_path = path/'models'\n",
         "\n",
         "# norm_adj, mean_adj, ngcf_adj = train_data.compute_adj_matrix()\n",
         "device = torch.device('cuda')\n",
         "model = NGCF(n_users=train_data.n_users, n_items=train_data.n_items, embed_size=64, n_layers=2, adj_matrix=train_data.adj_matrix).to(device)\n",
         "optimizer = torch.optim.Adam(model.parameters(), lr=0.005)\n",
-        "n_epochs = 5\n",
+        "n_epochs = 10\n",
         "\n",
-        "def train(model, data):\n",
-        "  model.train()\n",
+        "model.train()\n",
+        "n_batch = train_data.n_data // train_data.batch_size + 1\n",
+        "\n",
+        "def compute_ndcg(top_items, test_items, test_indices, k):\n",
+        "  ratings = (test_items * top_items).gather(1, test_indices)\n",
+        "  norm = torch.from_numpy(np.log2(np.arange(2, k+2))).float().to(device)\n",
+        "  dcg = (ratings / norm).sum(1)\n",
+        "  dcg_max = (torch.sort(ratings, dim=1, descending=True)[0] / norm).sum(1)\n",
+        "  ndcg = dcg / dcg_max\n",
+        "  ndcg[torch.isnan(ndcg)] = 0\n",
+        "  return ndcg\n",
+        "\n",
+        "def evaluate(user_embeddings, item_embeddings, k):\n",
+        "  user_parts = model.split_mtx(user_embeddings)\n",
+        "  train_parts = model.split_mtx(train_data.R)\n",
+        "  test_parts = model.split_mtx(test_data.R)\n",
+        "\n",
+        "  recall_parts, ndcg_parts = [], []\n",
+        "\n",
+        "  for user_part, train_part, test_part in zip(user_parts, train_parts, test_parts):\n",
+        "\n",
+        "    # Get the prediction scores for the users and items as a cuda float\n",
+        "    non_train_items = torch.from_numpy(1 - (train_part.todense())).float().to(device)\n",
+        "    predictions = torch.mm(user_part, item_embeddings.t()) * non_train_items\n",
+        "    # Get the k highest scores, scatter them as a float tensor in the GPU\n",
+        "    _, test_indices = torch.topk(predictions, dim=1, k=k)\n",
+        "    top_items = torch.zeros_like(predictions).float()\n",
+        "    top_items.scatter_(dim=1, index=test_indices, src=torch.tensor(1.0).to(device))\n",
+        "  \n",
+        "    test_items = torch.from_numpy(test_part.todense()).float().to(device)\n",
+        "    TP = (test_items * top_items).sum(1)\n",
+        "    recall = TP / test_items.sum(1)\n",
+        "    ndcg = compute_ndcg(top_items, test_items, test_indices, k)\n",
+        "  \n",
+        "    recall_parts.append(recall)\n",
+        "    ndcg_parts.append(ndcg)\n",
+        "\n",
+        "  mean_recall = torch.cat(recall_parts).mean()\n",
+        "  mean_ndcg = torch.cat(ndcg_parts).mean()\n",
+        "  print('Recall:\\t' + str(mean_recall.item()))\n",
+        "  print('NDCG\\t:' + str(mean_ndcg.item()))\n",
+        "\n",
+        "def save_state(model, optimizer, epoch):\n",
+        "  torch.save(model.state_dict(), models_path/'model1.pt')\n",
+        "  torch.save(optimizer.state_dict(), models_path/'optimizer.pt')\n",
+        "  torch.save(torch.IntTensor(epoch), models_path/'epoch.pt')\n",
+        "\n",
+        "def train(model, data, t):\n",
         "  total_loss = 0\n",
+        "  start = time()\n",
+        "  timings = []\n",
         "  for b in range(10):\n",
-        "    start = time()\n",
+        "    batch_start = time()\n",
         "    u, i, j = data.sample()\n",
         "    u = torch.from_numpy(u).long().to(device)\n",
         "    i = torch.LongTensor(i).to(device)\n",
@@ -332,19 +415,158 @@
         "    loss.backward()\n",
         "    optimizer.step()\n",
         "    total_loss += loss.item()\n",
-        "    print('time: ' + str(time()-start))\n",
-        "    print(loss.item())\n",
-        "  return total_loss\n",
+        "    timings.append(time()-batch_start)\n",
         "\n",
-        "n_batch = train_data.n_data // train_data.batch_size + 1\n",
-        "print('Total batches: ' + str(n_batch))\n",
+        "  avg_batch = np.average(timings)\n",
+        "  print('Finished epoch ' + str(t+1) + ' in\\t' + str(time()-start) + ' sec')\n",
+        "  print('Total BPR loss:\\t\\t' + str(total_loss))\n",
+        "  print('Average batch time:\\t' + str(avg_batch))\n",
+        "\n",
         "for t in range(n_epochs):\n",
-        "  epoch_loss = train(model, train_data)\n",
-        "  print(str(t) + ': ' + str(epoch_loss))\n",
-        "train(model, train_data)"
+        "  print('Starting epoch: ' + str(t+1))\n",
+        "  train(model, train_data, t)\n",
+        "  save_state(model, optimizer, t)\n",
+        "  evaluate(model.user_embeddings_final.detach(), model.item_embeddings_final.detach(), k=20)\n",
+        "  print('\\n============\\n')\n",
+        "\n",
+        "\n",
+        "\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Starting epoch: 1\n",
+            "Finished epoch 1 in\t2.793128490447998 sec\n",
+            "Total BPR loss:\t\t6.303795278072357\n",
+            "Average batch time:\t0.2793026685714722\n",
+            "Recall:\t0.007790080271661282\n",
+            "NDCG\t:0.022036591544747353\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 2\n",
+            "Finished epoch 2 in\t2.8095545768737793 sec\n",
+            "Total BPR loss:\t\t5.715576708316803\n",
+            "Average batch time:\t0.28094685077667236\n",
+            "Recall:\t0.00840833317488432\n",
+            "NDCG\t:0.019862934947013855\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 3\n",
+            "Finished epoch 3 in\t2.8440659046173096 sec\n",
+            "Total BPR loss:\t\t5.492582559585571\n",
+            "Average batch time:\t0.28439621925354003\n",
+            "Recall:\t0.01031746156513691\n",
+            "NDCG\t:0.02105947583913803\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 4\n",
+            "Finished epoch 4 in\t2.808786630630493 sec\n",
+            "Total BPR loss:\t\t5.352205455303192\n",
+            "Average batch time:\t0.2808708906173706\n",
+            "Recall:\t0.0096726194024086\n",
+            "NDCG\t:0.0199887678027153\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 5\n",
+            "Finished epoch 5 in\t2.775261878967285 sec\n",
+            "Total BPR loss:\t\t5.235935628414154\n",
+            "Average batch time:\t0.27751827239990234\n",
+            "Recall:\t0.009200001135468483\n",
+            "NDCG\t:0.019457748159766197\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 6\n",
+            "Finished epoch 6 in\t2.8341972827911377 sec\n",
+            "Total BPR loss:\t\t5.130936503410339\n",
+            "Average batch time:\t0.28341021537780764\n",
+            "Recall:\t0.010378969833254814\n",
+            "NDCG\t:0.02265828475356102\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 7\n",
+            "Finished epoch 7 in\t2.7702794075012207 sec\n",
+            "Total BPR loss:\t\t5.097134947776794\n",
+            "Average batch time:\t0.27702107429504397\n",
+            "Recall:\t0.009467857889831066\n",
+            "NDCG\t:0.02013349160552025\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 8\n",
+            "Finished epoch 8 in\t2.7877769470214844 sec\n",
+            "Total BPR loss:\t\t5.005613684654236\n",
+            "Average batch time:\t0.27876992225646974\n",
+            "Recall:\t0.009735715575516224\n",
+            "NDCG\t:0.02244431897997856\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 9\n",
+            "Finished epoch 9 in\t2.7898237705230713 sec\n",
+            "Total BPR loss:\t\t4.942654401063919\n",
+            "Average batch time:\t0.27897522449493406\n",
+            "Recall:\t0.010342857800424099\n",
+            "NDCG\t:0.024900417774915695\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 10\n",
+            "Finished epoch 10 in\t2.773909091949463 sec\n",
+            "Total BPR loss:\t\t4.918108224868774\n",
+            "Average batch time:\t0.27738180160522463\n",
+            "Recall:\t0.010805158875882626\n",
+            "NDCG\t:0.024191346019506454\n",
+            "\n",
+            "============\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iUl49uXH17W2",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Evaluation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0KEfM0PeD5Sx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "6d03f8ee-3531-4ced-dfeb-a3b378bac3ad"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tensor(0.0072, device='cuda:0')\n",
+            "tensor(0.0150, device='cuda:0')\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -470,16 +692,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iUl49uXH17W2",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Evaluation"
-      ]
     },
     {
       "cell_type": "code",
